--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ unify = "^0.5"
 flake8 = "^3.7.9"
 pylint = "^2.4.4"
 mypy = "^0.761"
+numpy = "^1.18.2"
+flask = "^1.1.2"
+sqlalchemy = "^1.3.16"
 
 [tool.poetry.dev-dependencies]
 
