--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^0.761"
 numpy = "^1.18.2"
 flask = "^1.1.2"
 sqlalchemy = "^1.3.16"
+coverage = "^5.1"
 
 [tool.poetry.dev-dependencies]
 
