--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ numpy = "^1.18.2"
 flask = "^1.1.2"
 sqlalchemy = "^1.3.16"
 coverage = "^5.1"
+flask_httpauth = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 
